# dlplay

./: .gitignore  README.md  pixi.toml  pyproject.toml
apps/classification/: multiview_classification_model.py  train_backbones_cifar10.py
apps/finetuning/: rcnn_eval_finetuned_model.py  rcnn_finetuning_replace_backbone.py  rcnn_finetuning_replace_head.py
apps/space3d/: point_transformer_classification_eval.py  point_transformer_classification_train.py  point_transformer_segmentation_eval.py  point_transformer_segmentation_train.py  pointnet2_classification_eval.py  pointnet2_classification_train.py  pointnet2_segmentation_eval.py  pointnet2_segmentation_train.py
data/datasets/: download_pennfudanped_dataset.sh
dlplay/: __init__.py  paths.py
dlplay/core/: distributed.py  evaluation.py  initialize.py  learning_rate.py  metric_logger.py  smoothed_value.py  tensor_backend.py  training.py  training_functions.py  transform_helpers.py  transforms.py
dlplay/datasets/: custom_dataset.py  custom_subset.py  kaggle_basedataset.py  kaggle_shapenet.py  modelnet.py  pennfudan_dataset.py  point3d_datasets_helpers.py  s3dis.py  scannet.py  scannet_simple.py  shapenet.py  stats.py  toydatasets_sklearn.py
dlplay/detection/: README.md  coco_engine.py  coco_eval.py  coco_utils.py  utils.py
dlplay/geometry/: transformations.py
dlplay/io/: progress_bar.py  rerun_interface.py  terminal.py
dlplay/models/: fine_tuning_helpers.py  fine_tuning_rcnn.py  model_helpers.py
dlplay/utils/: README.md  (+6 more)
docs/: how_to_install_opencv.md
notebooks/: opencv_test.ipynb
test/: test_import.py
tools/: add_headers_python.py  install_all.sh  install_torch_points3d.sh  pyenv-create.sh
(+187 files in other folders)
